--- a/notebooks/visualiza_raw_data.ipynb
+++ b/notebooks/visualiza_raw_data.ipynb
@@ -11,7 +11,8 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import math"
+    "import math\n",
+    "\n"
    ]
   },
   {
