--- a/notebooks/lip_crop_region.ipynb
+++ b/notebooks/lip_crop_region.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "fd685a6e",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 15,
+   "id": "5b9c63e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\pradh\\miniconda3\\envs\\lipreader\\lib\\site-packages\\qai_hub_models\\utils\\quantization_aimet_onnx.py:33: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from tqdm.autonotebook import tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qai_hub_models.models.mediapipe_face import demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "ec69cd98",
    "metadata": {},
    "outputs": [],
@@ -31,65 +50,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "bae36491",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[160, 189, 216],\n",
-       "        [189, 213, 235],\n",
-       "        [203, 221, 232],\n",
+       "array([[[169, 193, 199],\n",
+       "        [167, 193, 200],\n",
+       "        [167, 194, 204],\n",
        "        ...,\n",
-       "        [162, 159, 175],\n",
-       "        [168, 160, 177],\n",
-       "        [165, 157, 174]],\n",
+       "        [151, 147, 159],\n",
+       "        [141, 144, 158],\n",
+       "        [146, 154, 167]],\n",
        "\n",
-       "       [[171, 201, 226],\n",
-       "        [198, 223, 243],\n",
-       "        [207, 226, 234],\n",
+       "       [[166, 192, 198],\n",
+       "        [165, 193, 200],\n",
+       "        [166, 195, 204],\n",
        "        ...,\n",
-       "        [161, 158, 174],\n",
-       "        [165, 159, 176],\n",
-       "        [165, 157, 174]],\n",
+       "        [158, 154, 166],\n",
+       "        [151, 152, 166],\n",
+       "        [151, 157, 170]],\n",
        "\n",
-       "       [[161, 192, 215],\n",
-       "        [193, 219, 236],\n",
-       "        [206, 225, 232],\n",
+       "       [[163, 195, 200],\n",
+       "        [161, 195, 201],\n",
+       "        [162, 198, 206],\n",
        "        ...,\n",
-       "        [160, 157, 173],\n",
-       "        [164, 158, 175],\n",
-       "        [163, 157, 174]],\n",
+       "        [165, 163, 175],\n",
+       "        [162, 162, 174],\n",
+       "        [160, 162, 173]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[126, 138, 138],\n",
-       "        [123, 135, 135],\n",
-       "        [124, 136, 136],\n",
+       "       [[ 39,  49,  36],\n",
+       "        [ 37,  50,  34],\n",
+       "        [ 33,  49,  31],\n",
        "        ...,\n",
-       "        [133, 137, 155],\n",
-       "        [131, 137, 150],\n",
-       "        [128, 134, 145]],\n",
+       "        [138, 138, 150],\n",
+       "        [136, 136, 148],\n",
+       "        [132, 132, 144]],\n",
        "\n",
-       "       [[124, 135, 133],\n",
-       "        [123, 134, 132],\n",
-       "        [125, 136, 134],\n",
+       "       [[ 42,  46,  27],\n",
+       "        [ 37,  43,  24],\n",
+       "        [ 33,  45,  23],\n",
        "        ...,\n",
-       "        [137, 136, 156],\n",
-       "        [135, 135, 151],\n",
-       "        [130, 133, 147]],\n",
+       "        [139, 137, 149],\n",
+       "        [136, 135, 145],\n",
+       "        [132, 131, 141]],\n",
        "\n",
-       "       [[126, 137, 135],\n",
-       "        [126, 137, 135],\n",
-       "        [129, 137, 136],\n",
+       "       [[ 41,  42,  22],\n",
+       "        [ 35,  38,  16],\n",
+       "        [ 34,  42,  19],\n",
        "        ...,\n",
-       "        [138, 136, 156],\n",
-       "        [134, 134, 150],\n",
-       "        [131, 132, 146]]], dtype=uint8)"
+       "        [139, 137, 149],\n",
+       "        [136, 132, 143],\n",
+       "        [133, 129, 140]]], dtype=uint8)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "8f151a18",
    "metadata": {},
    "outputs": [],
@@ -111,65 +130,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "457db196",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[160, 189, 216],\n",
-       "        [189, 213, 235],\n",
-       "        [203, 221, 232],\n",
+       "array([[[169, 193, 199],\n",
+       "        [167, 193, 200],\n",
+       "        [167, 194, 204],\n",
        "        ...,\n",
-       "        [162, 159, 175],\n",
-       "        [168, 160, 177],\n",
-       "        [165, 157, 174]],\n",
+       "        [151, 147, 159],\n",
+       "        [141, 144, 158],\n",
+       "        [146, 154, 167]],\n",
        "\n",
-       "       [[171, 201, 226],\n",
-       "        [198, 223, 243],\n",
-       "        [207, 226, 234],\n",
+       "       [[166, 192, 198],\n",
+       "        [165, 193, 200],\n",
+       "        [166, 195, 204],\n",
        "        ...,\n",
-       "        [161, 158, 174],\n",
-       "        [165, 159, 176],\n",
-       "        [165, 157, 174]],\n",
+       "        [158, 154, 166],\n",
+       "        [151, 152, 166],\n",
+       "        [151, 157, 170]],\n",
        "\n",
-       "       [[161, 192, 215],\n",
-       "        [193, 219, 236],\n",
-       "        [206, 225, 232],\n",
+       "       [[163, 195, 200],\n",
+       "        [161, 195, 201],\n",
+       "        [162, 198, 206],\n",
        "        ...,\n",
-       "        [160, 157, 173],\n",
-       "        [164, 158, 175],\n",
-       "        [163, 157, 174]],\n",
+       "        [165, 163, 175],\n",
+       "        [162, 162, 174],\n",
+       "        [160, 162, 173]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[126, 138, 138],\n",
-       "        [123, 135, 135],\n",
-       "        [124, 136, 136],\n",
+       "       [[ 39,  49,  36],\n",
+       "        [ 37,  50,  34],\n",
+       "        [ 33,  49,  31],\n",
        "        ...,\n",
-       "        [133, 137, 155],\n",
-       "        [131, 137, 150],\n",
-       "        [128, 134, 145]],\n",
+       "        [138, 138, 150],\n",
+       "        [136, 136, 148],\n",
+       "        [132, 132, 144]],\n",
        "\n",
-       "       [[124, 135, 133],\n",
-       "        [123, 134, 132],\n",
-       "        [125, 136, 134],\n",
+       "       [[ 42,  46,  27],\n",
+       "        [ 37,  43,  24],\n",
+       "        [ 33,  45,  23],\n",
        "        ...,\n",
-       "        [137, 136, 156],\n",
-       "        [135, 135, 151],\n",
-       "        [130, 133, 147]],\n",
+       "        [139, 137, 149],\n",
+       "        [136, 135, 145],\n",
+       "        [132, 131, 141]],\n",
        "\n",
-       "       [[126, 137, 135],\n",
-       "        [126, 137, 135],\n",
-       "        [129, 137, 136],\n",
+       "       [[ 41,  42,  22],\n",
+       "        [ 35,  38,  16],\n",
+       "        [ 34,  42,  19],\n",
        "        ...,\n",
-       "        [138, 136, 156],\n",
-       "        [134, 134, 150],\n",
-       "        [131, 132, 146]]], dtype=uint8)"
+       "        [139, 137, 149],\n",
+       "        [136, 132, 143],\n",
+       "        [133, 129, 140]]], dtype=uint8)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "e4fc358c",
    "metadata": {},
    "outputs": [
@@ -190,7 +209,7 @@
        "torch.Size([3, 192, 192])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,168 +223,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "id": "702f9328",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the model\n",
+    "from qai_hub_models.models.mediapipe_face.app import MediaPipeFaceApp\n",
+    "from qai_hub_models.utils.asset_loaders import load_image\n",
+    "from qai_hub_models.utils.display import display_or_save_image\n",
+    "\n",
+    "from PIL import Image\n",
+    "\n",
+    "torch_model = Model.from_pretrained()\n",
+    "\n",
+    "# Device\n",
+    "device = hub.Device(\"CPU\")\n",
+    "landmark_detector = torch_model.face_landmark_detector\n",
+    "detector    = torch_model.face_detector\n",
+    "\n",
+    "\n",
+    "app = MediaPipeFaceApp(\n",
+    "        detector,  # type: ignore\n",
+    "        landmark_detector,  # type: ignore\n",
+    "        torch_model.face_detector.anchors,\n",
+    "        torch_model.face_detector.get_input_spec(),\n",
+    "        torch_model.face_landmark_detector.get_input_spec(),\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d6abc21",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(tensor([0.0001, 0.0003, 0.0001, 0.0108, 0.0018, 0.0002, 0.0006, 0.0002]), tensor([[[ 0.4501,  0.6709, -0.0351],\n",
-      "         [ 0.4645,  0.6005, -0.1170],\n",
-      "         [ 0.4547,  0.6193, -0.0541],\n",
-      "         ...,\n",
-      "         [ 0.4951,  0.4388, -0.0321],\n",
-      "         [ 0.6231,  0.4167,  0.0254],\n",
-      "         [ 0.6363,  0.4010,  0.0269]],\n",
-      "\n",
-      "        [[ 0.4701,  0.6759, -0.0403],\n",
-      "         [ 0.4574,  0.6011, -0.1113],\n",
-      "         [ 0.4688,  0.6228, -0.0541],\n",
-      "         ...,\n",
-      "         [ 0.5027,  0.4469, -0.0330],\n",
-      "         [ 0.6409,  0.4209, -0.0102],\n",
-      "         [ 0.6541,  0.4040, -0.0116]],\n",
-      "\n",
-      "        [[ 0.4997,  0.7153, -0.0264],\n",
-      "         [ 0.4716,  0.6449, -0.1087],\n",
-      "         [ 0.4943,  0.6603, -0.0461],\n",
-      "         ...,\n",
-      "         [ 0.5298,  0.4717, -0.0565],\n",
-      "         [ 0.6804,  0.4360, -0.0545],\n",
-      "         [ 0.6948,  0.4164, -0.0585]],\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "        [[ 0.5252,  0.6642, -0.0279],\n",
-      "         [ 0.5331,  0.5944, -0.1004],\n",
-      "         [ 0.5326,  0.6119, -0.0444],\n",
-      "         ...,\n",
-      "         [ 0.5871,  0.4384, -0.0395],\n",
-      "         [ 0.7141,  0.4165, -0.0101],\n",
-      "         [ 0.7288,  0.3982, -0.0108]],\n",
-      "\n",
-      "        [[ 0.4695,  0.6945, -0.0348],\n",
-      "         [ 0.4732,  0.6202, -0.1209],\n",
-      "         [ 0.4717,  0.6387, -0.0549],\n",
-      "         ...,\n",
-      "         [ 0.5176,  0.4473, -0.0406],\n",
-      "         [ 0.6591,  0.4223,  0.0038],\n",
-      "         [ 0.6733,  0.4044,  0.0038]],\n",
-      "\n",
-      "        [[ 0.4825,  0.6958, -0.0292],\n",
-      "         [ 0.4905,  0.6260, -0.1112],\n",
-      "         [ 0.4863,  0.6436, -0.0482],\n",
-      "         ...,\n",
-      "         [ 0.5266,  0.4599, -0.0387],\n",
-      "         [ 0.6572,  0.4340,  0.0078],\n",
-      "         [ 0.6700,  0.4183,  0.0082]]]))\n"
+      "Saving image to ./test.png\\image.png\n"
      ]
-    }
-   ],
-   "source": [
-    "# Load the model\n",
-    "torch_model = Model.from_pretrained()\n",
-    "\n",
-    "# Device\n",
-    "device = hub.Device(\"CPU\")\n",
-    "results = torch_model.face_landmark_detector(images_processed)\n",
-    "\n",
-    "# print(dir(torch_model))\n",
-    "print(results)\n",
-    "# Trace Model\n",
-    "# input_shape = torch_model.get_input_spec()\n",
-    "# sample_inputs = torch_model.sample_inputs()\n",
-    "\n",
-    "# print(f\"Input shape: {input_shape} \\n Sample Inputs: {sample_inputs}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "6ad32040",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "def draw_landmarks(img, points, connections=[], color=(0, 255, 0), size=2):\n",
-    "    h, w = img.shape[:2]\n",
-    "    points = points.copy()\n",
-    "    for point in points:\n",
-    "        x, y = point[:2]\n",
-    "        if 0 <= x <= 1 and 0 <= y <= 1:\n",
-    "            x = int(x * w)\n",
-    "            y = int(y * h)\n",
-    "            cv2.circle(img, (x, y), size, color, thickness=size)\n",
-    "    # Draw connections if needed\n",
-    "    return img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "0d008853",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "points = results[1][0]\n",
-    "img    = images[0]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "01002a3d",
-   "metadata": {},
-   "outputs": [
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pradh\\AppData\\Local\\Temp\\ipykernel_30480\\193779454.py:7: DeprecationWarning: 'mode' parameter is deprecated and will be removed in Pillow 13 (2026-10-15)\n",
+      "  out_image = Image.fromarray(pred_image[0], \"RGB\")\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "(480, 640, 3)"
+       "False"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "img.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "ab12080f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if torch.is_tensor(points):\n",
-    "    points = points.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "id": "da251b98",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 58,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "output = draw_landmarks(img, points)\n",
-    "cv2.imwrite(\"facial_detection.png\", output)"
+    "num = '01'\n",
+    "images_path = f\"..\\data_raw\\F01\\phrases\\{num}\\{num}\\color_001.jpg\"\n",
+    "image = load_image(images_path).convert(\"RGB\")\n",
+    "pred_image = app.predict_landmarks_from_image(image)\n",
+    "\n",
+    "assert isinstance(pred_image[0], np.ndarray)\n",
+    "out_image = Image.fromarray(pred_image[0], \"RGB\")\n",
+    "\n",
+    "display_or_save_image(out_image, './test')"
    ]
   }
  ],
